<resources>
    <string name="app_name">Football Apps</string>
    <string name="vs">vs</string>
    <string name="zero">0</string>
    <string name="Goals">Goals</string>
    <string name="Shots">Shots</string>
    <string name="Lineups">Lineups</string>
    <string name="GoalKeeper">Goal Keeper</string>
    <string name="Defense">Defense</string>
    <string name="Midfield">Midfield</string>
    <string name="Forward">Forward</string>
    <string name="Subtitutes">Subtitutes</string>
    <string name="PrevMatch">Prev. Match</string>
    <string name="NextMatch">Next Match</string>
    <string name="Matches">Matches</string>
    <string name="Teams">Teams</string>
    <string name="Overview">Overview</string>
    <string name="Player">Player</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </array>




</resources>
