<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="?actionBarSize">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:text="@string/app_name"
            />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/dateEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight=".1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="100sp"
                            android:id="@+id/strTeamBadgeHome"
                            android:layout_gravity="center"
                            android:layout_height="100sp" />
                        <TextView
                            android:id="@+id/strHomeTeam"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/intHomeScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/zero"
                        android:layout_marginLeft="20sp"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vs"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/intAwayScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:layout_marginRight="20sp"
                        android:textStyle="bold"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight=".1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="100sp"
                            android:id="@+id/strTeamBadgeAway"
                            android:layout_gravity="center"
                            android:layout_height="100sp" />
                        <TextView
                            android:id="@+id/strAwayTeam"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/strHomeGoalDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Goals"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayGoalDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/intHomeShots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Shots"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/intAwayShots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/Lineups"
                    android:layout_marginBottom="10dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/strHomeLineupGoalkeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/GoalKeeper"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayLineupGoalkeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/strHomeLineupDefense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Defense"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayLineupDefense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/strHomeLineupMidfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Midfield"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayLineupMidfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/strHomeLineupForward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Forward"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayLineupForward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/strHomeLineupSubstitutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:gravity="left"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:gravity="center"
                        android:text="@string/Subtitutes"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/strAwayLineupSubstitutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight=".3"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>